--- a/GFL/index.html
+++ b/GFL/index.html
@@ -218,6 +218,7 @@
         
         <!-- #region Javascript -->
         <script type="text/javascript" src="/univasset/scripts/includeHTML.js"></script>
+        <script type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script type="text/javascript" src="./tempcard.js"></script>
         <script type="text/javascript" src="./indexscript.js"></script>
         <!-- #endregion -->
