--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -104,7 +104,12 @@
                             <li><a href="https://docs.google.com/document/d/16g4D18bUGqomAzL-UANAjZAU4HfHruph-R8uyHBhMcE">Advanced Info</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://www.reddit.com/user/ConductorBichir">u/ConductorBichir</a></li>
+                    <li>u/ConductorBichir
+                        <ul>
+                            <li><a href="https://www.reddit.com/user/ConductorBichir">Reddit Pinned Posts</a></li>
+                            <li><a href="https://docs.google.com/document/d/1ixj8_H7bB5YELD276NaG8_A_ElOMYS95RfjdM3fUaVc">Starter Guide</a></li>
+                        </ul>
+                    </li>
                     <li><a href="https://docs.google.com/document/d/1hdoD9i8gMUsdU22pncGw3o63_-pazXpq84hcvothAT4">/gfg/</a></li>
                     <li><a href="https://www.reddit.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0v36wf">u/pointblanksniper</a></li>
                 </ul>
