--- a/GFL/index.html
+++ b/GFL/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
+        <!-- link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9" -->
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
         
         <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
