--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -84,13 +84,17 @@
                             <li><a href="https://docs.google.com/spreadsheets/d/10LJdksnM3zipOb72IneJD7WVp3765JYJEGg0LnodzDI">Spreadsheet Guide</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">Angry Trap Midget/Matsuda</a></li>
+                    <li>Angry Trap Midget/Matsuda
+                        <ul>
+                            <li><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">First Steps</a></li>
+                            <li><a href="https://gfl.matsuda.tips/blog/">Guides</a></li>
+                        </ul>
+                    </li>
                     <li>Gamepress
                         <ul>
-                            <li><a href="https://gamepress.gg/girlsfrontline/gfl-newbie-help-sten-and-skorpion">JP YT</a></li>
+                            <li><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-how-start-girls-frontline">Main Starter Link</a></li>
                             <li><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></li>
-                            <li><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-building-your-first-two-teams">First Team</a></li>
-                            <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Priorities</a></li>
+                            <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Team Build Priorities</a></li>
                         </ul>
                     </li>
                     <li><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></li>
