--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -73,7 +73,24 @@
                 <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
 
                 <h1 id="GFL2"><a href="#GFL2">I've heard news about GFL2. Is GFL1 going to be phased out?</a></h1>
-                <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished, in addition to the gameplay being completely different. The plan is for all games to be played simultaneously.</p>
+                <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
+                <table>
+                    <thead>
+                        <tr>Game</tr>
+                        <tr>Gameplay</tr>
+                        <tr>Timeline</tr>
+                    </thead>
+                    <tbody>
+                        <tr>GFL1</tr>
+                        <tr>Node-based TRPG overworld<br>RTS "auto"-battle</tr>
+                        <tr>2060s</tr>
+                    </tbody>
+                    <tbody>
+                        <tr>GFL2: Exillium</tr>
+                        <tr>XCOM/FE-like</tr>
+                        <tr>2070s</tr>
+                    </tbody>
+                </table>
                 <!-- How is the gameplay loop like? -->
                 <h1 id="guide"><a href="#guide">Any guide thread I should read before starting out?</a></h1>
                 <ul>
