--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -76,19 +76,25 @@
                 <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
                 <table>
                     <thead>
-                        <tr>Game</tr>
-                        <tr>Gameplay</tr>
-                        <tr>Timeline</tr>
+                        <tr>
+                            <th>Game</th>
+                            <th>Gameplay</th>
+                            <th>Timeline</th>
+                        </tr>
                     </thead>
                     <tbody>
-                        <tr>GFL1</tr>
-                        <tr>Node-based TRPG overworld<br>RTS "auto"-battle</tr>
-                        <tr>2060s</tr>
+                        <tr>
+                            <td>GFL1</td>
+                            <td>Node-based TRPG overworld<br>RTS "auto"-battle</td>
+                            <td>2060s</td>
+                        </tr>
                     </tbody>
                     <tbody>
-                        <tr>GFL2: Exillium</tr>
-                        <tr>XCOM/FE-like</tr>
-                        <tr>2070s</tr>
+                        <tr>
+                            <td>GFL2: Exillium</td>
+                            <td>XCOM/FE-like</td>
+                            <td>2070s</td>
+                        </tr>
                     </tbody>
                 </table>
                 <!-- How is the gameplay loop like? -->
