--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -55,13 +55,26 @@
 
         <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script>
-            output = document.getElementById('output');
-
+            var output = document.getElementById('output');
+            var jsonList = [{}];
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
-                //.then(jsonString => JSON.parse(jsonString))
-                .then(text => {output.innerHTML = text});
-            
+                .then(jsonString => JSON.parse(jsonString))
+                .then(jsonObject => {jsonList = jsonObject})
+
+            var elite = [];
+            var nonelite = [];
+
+            for (const units of jsonList) {
+                if (units['passive_skill'].includes('200304')) {
+                    nonelite.push(units['code'])
+                } else {
+                    elite.push(units['code'])
+                }
+            }
+
+            output.innerHTML = `<p>${elite}</p><p>${nonelite}</p>`;
+
         </script>
     </body>
 </html>
