--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -49,13 +49,35 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="output"></div>
+                <div id="output">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Elites</th>
+                                <th>Non-Elites</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>GFL1</td>
+                                <td>Node-based TRPG overworld<br>RTS "auto"-battle</td>
+                                <td>2060s</td>
+                            </tr>
+                            <tr>
+                                <td>GFL2: Exillium</td>
+                                <td>XCOM/FE-like</td>
+                                <td>2070s</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </section>
         </div>
 
         <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script>
             var output = document.getElementById('output');
+            var tablebody = document.getElementsByTagName('tbody')[0];
             var jsonList = [{}];
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
@@ -64,7 +86,6 @@
 
             var elite = [];
             var nonelite = [];
-
             for (const units of jsonList) {
                 if (units['passive_skill'].includes('200304')) {
                     nonelite.push(units['code'])
@@ -73,7 +94,37 @@
                 }
             }
 
-            output.innerHTML = `<p>${elite}</p><p>${nonelite}</p>`;
+            var rows = "";
+            for (const array of zip(elite, nonelite)) {
+                rows += `<tr>${array.map(val => `<td>${val}</td>`)}</tr>`;
+            }
+
+            tablebody.innerHTML = rows;
+
+
+
+            /** @param {boolean} extend @param {Array[]} arrays*/
+            function* zip(...arrays) {
+                var length = 0
+
+                for (const item of arrays) {
+                    length = Math.max(length, item.length)
+                }
+
+                for (const item of arrays) {
+                    if (item.length < length) {
+                        item.fill('', item.length)
+                    }
+                }
+
+                for (let index = 0; index < length; index++) {
+                    var output = []
+                    for (const item of arrays) {
+                        output.push(item[index])
+                    }
+                    yield output
+                }
+            }
 
         </script>
     </body>
