--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -58,16 +58,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>GFL1</td>
-                                <td>Node-based TRPG overworld<br>RTS "auto"-battle</td>
-                                <td>2060s</td>
-                            </tr>
-                            <tr>
-                                <td>GFL2: Exillium</td>
-                                <td>XCOM/FE-like</td>
-                                <td>2070s</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -79,6 +70,7 @@
             var output = document.getElementById('output');
             var tablebody = document.getElementsByTagName('tbody')[0];
             var jsonList = [{}];
+
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
@@ -87,12 +79,14 @@
             var elite = [];
             var nonelite = [];
             for (const units of jsonList) {
-                if (units['passive_skill'].includes('200304')) {
+                if (String(units['passive_skill']).includes('200304')) {    //Uncaught TypeError: Cannot read properties of undefined (reading 'includes')
                     nonelite.push(units['code'])
                 } else {
                     elite.push(units['code'])
                 }
             }
+
+            console.log(elite)
 
             var rows = "";
             for (const array of zip(elite, nonelite)) {
@@ -100,6 +94,10 @@
             }
 
             tablebody.innerHTML = rows;
+
+            for (let index = 0; index < 10; index++) {
+                console.log(['no', 'yes'][index%2 == 0])                
+            }
 
 
 
