--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -72,8 +72,8 @@
             var jsonList = [{}];
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
-                .then(response => response.text())
-                .then(jsonString => JSON.parse(jsonString))
+                .then(response => response.json())
+                //.then(jsonString => JSON.parse(jsonString))
                 .then(jsonObject => {jsonList = jsonObject})
 
             console.log(jsonList)
