--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -72,11 +72,43 @@
             var jsonList = [{}];
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
-                .then(response => response.json())
+                .then(response => JSON.parse(response))
                 //.then(jsonString => JSON.parse(jsonString))
                 .then(jsonObject => {jsonList = jsonObject})
 
             console.log(jsonList)
+
+            console.log(6 % 2 == 0)
+
+            console.log(Number(6 % 2 == 0))
+
+            console.log(Number(5 % 2 == 0))
+
+
+
+
+
+     /*        $.getJSON("lojas.json", function (json){
+    $.each(json.lojas, function (i, lojas) {
+      var siglas = '<li><a href="#' + lojas.uf + '">' + lojas.cidade + '</a></li>';
+
+
+      var cidades = '<ul id="' + lojas.uf + '"class="cidades">';
+      $.each(lojas.unidades, function (i, unidades) {
+        cidades += '<li><p>'+ unidades.nome + '</p><p>' + unidades.logradouro + '</p></li>'; 
+      });
+      cidades += '</ul>';
+
+      $(siglas).appendTo('#lista-siglas');
+      $(cidades).appendTo('#lista-cidades');
+    });
+  }); */
+
+
+
+
+
+
 
             var elite = [];
             var nonelite = [];
@@ -97,9 +129,8 @@
             tablebody.innerHTML = rows;
 
             for (let index = 0; index < 10; index++) {
-                console.log(['no', 'yes'][index%2 == 0])                
+                console.log(['no', 'yes'][index % 2 == 0])
             }
-
 
 
             /** @param {boolean} extend @param {Array[]} arrays*/
