--- a/univasset/scripts/mainpagebuttons.html
+++ b/univasset/scripts/mainpagebuttons.html
@@ -2,3 +2,13 @@
     <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
     <!-- Menu Buttons -->
 </section>
+
+<!-- header>
+    <div class="container">
+        <a id="a-title" href="/"><h1>Random Scraps</h1></a>
+        <h2><getparam key="0"></getparam></h2>
+
+        <include src="/univasset/scripts/mainpagebuttons.html"></include>
+    </div>
+</header -->
+
