--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -69,19 +69,20 @@
         <script>
             var output = document.getElementById('output');
             var tablebody = document.getElementsByTagName('tbody')[0];
-            var jsonList = [{}];
+            var jsonList;
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
-                //.then(jsonObject => {jsonList = jsonObject})
-                .then(jsonObject => {console.log(jsonObject)})
-
-            //console.log(jsonList)
-
-            for (let index = 0; index < 10; index++) {
-                console.log(['no', 'yes'][Number(index % 2 == 0)])
-            }
+                .then(jsonObject => {
+                    var elite = [], nonelite = [];
+                    for (const units of jsonObject) {
+                        [elite, nonelite][Number(String(units.passive_skill).includes('200304'))].push(units.code)
+                    }
+                    console.log(elite)
+                    console.log(nonelite)
+                })
+            
 
 
 
@@ -113,15 +114,6 @@
 
 
 
-            var elite = [];
-            var nonelite = [];
-            for (const units of jsonList) {
-                if (String(units['passive_skill']).includes('200304')) {    //Uncaught TypeError: Cannot read properties of undefined (reading 'includes')
-                    nonelite.push(units['code'])
-                } else {
-                    elite.push(units['code'])
-                }
-            }
 
 
             var rows = "";
