--- a/univasset/scripts/mainpagebuttons.html
+++ b/univasset/scripts/mainpagebuttons.html
@@ -8,7 +8,9 @@
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
         <h2><getparam key="0"></getparam></h2>
 
-        <include src="/univasset/scripts/mainpagebuttons.html"></include>
+        <section id="downloads">
+            <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
+        </section>
     </div>
 </header -->
 
