--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -69,61 +69,20 @@
         <script>
             var output = document.getElementById('output');
             var tablebody = document.getElementsByTagName('tbody')[0];
-            var jsonList;
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
                 .then(jsonObject => {
-                    var elite = [], nonelite = [];
+                    var elite = new Set(), nonelite = new Set(), rows = "";
                     for (const units of jsonObject) {
-                        [elite, nonelite][Number(String(units.passive_skill).includes('200304'))].push(units.code)
+                        [elite, nonelite][Number(String(units.passive_skill).includes('200304'))].add(units.code)
                     }
-                    console.log(elite)
-                    console.log(nonelite)
+                    for (const array of zip(elite, nonelite)) {
+                        rows += `<tr>${array.map(val => `<td>${val}</td>`)}</tr>`;
+                    }
+                    tablebody.innerHTML = rows;
                 })
-            
-
-
-
-
-
-
-
-
-
-     /*        $.getJSON("lojas.json", function (json){
-    $.each(json.lojas, function (i, lojas) {
-      var siglas = '<li><a href="#' + lojas.uf + '">' + lojas.cidade + '</a></li>';
-
-
-      var cidades = '<ul id="' + lojas.uf + '"class="cidades">';
-      $.each(lojas.unidades, function (i, unidades) {
-        cidades += '<li><p>'+ unidades.nome + '</p><p>' + unidades.logradouro + '</p></li>'; 
-      });
-      cidades += '</ul>';
-
-      $(siglas).appendTo('#lista-siglas');
-      $(cidades).appendTo('#lista-cidades');
-    });
-  }); */
-
-
-
-
-
-
-
-
-
-            var rows = "";
-            for (const array of zip(elite, nonelite)) {
-                rows += `<tr>${array.map(val => `<td>${val}</td>`)}</tr>`;
-            }
-
-            tablebody.innerHTML = rows;
-
-
 
             /** @param {boolean} extend @param {Array[]} arrays*/
             function* zip(...arrays) {
@@ -147,7 +106,6 @@
                     yield output
                 }
             }
-
         </script>
     </body>
 </html>
