--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -49,16 +49,24 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="output">
-
-                </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Elites</th>
+                            <th>Non-Elites</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
             </section>
         </div>
 
         <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script>
-            var output = document.getElementById('output');
-            //var tablebody = document.getElementsByTagName('tbody')[0];
+            //var output = document.getElementById('output');
+            var tablebody = document.getElementsByTagName('tbody')[0];
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
@@ -71,19 +79,9 @@
                     for (const array of zip(elite, nonelite)) {
                         rows += `<tr><td>${array[0]}</td><td>${array[1]}</td></tr>`;
                     }
-                    output.innerHTML = `<table>
-                        <thead>
-                            <tr>
-                                <th>Elites</th>
-                                <th>Non-Elites</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            ${rows}
-                        </tbody>
-                    </table>`;
-                    //tablebody.innerHTML = rows;
-                })
+                    //output.innerHTML = ``;
+                    tablebody.innerHTML = rows;
+                });
 
             /** @param {boolean} extend @param {Array[]} arrays*/
             function* zip(...arrays) {
@@ -93,11 +91,15 @@
                     length = Math.max(length, item.length)
                 }
 
+                console.log('Before:', arrays)
+
                 for (const item of arrays) {
                     if (item.length < length) {
                         item.fill('', item.length)
                     }
                 }
+
+                console.log('After:', arrays)
 
                 for (let index = 0; index < length; index++) {
                     var output = [];                    
