--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -67,46 +67,56 @@
         <script>
             var tablebody = document.getElementsByTagName('tbody')[0];
 
+            /** @param {boolean} extend @param {Iterable[]} arrays*/
+            function* zip(...arrays) {
+                arrays = arrays.map(arr => Array.from(arr))
+                var maxlength = 0
+
+                for (const item of arrays) {
+                    maxlength = Math.max(maxlength, item.length)
+                }
+
+                console.log(maxlength)
+
+                console.log('Before:', arrays);
+
+                for (const item of arrays) {
+                    if (item.length < maxlength) {
+                        item.fill('', item.length)
+                    }
+                }
+
+                console.log('After:', arrays);
+
+                for (let index = 0; index < maxlength; index++) {
+                    var output = [];
+
+                    for (const item of arrays) {
+                        output.push(item[index])
+                    }
+
+                    //console.log('Output:', output)
+
+                    yield output
+                }
+            }
+
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
                 .then(jsonObject => {
                     var elite = new Set(), nonelite = new Set(), rows = "";
+                    
                     for (const units of jsonObject) {
                         [elite, nonelite][Number(String(units.passive_skill).includes('200304'))].add(units.code)
                     }
+
                     for (const array of zip(elite, nonelite)) {
-                        console.log('Array', array)
+                        //console.log('Array:', array)
                         rows += `<tr><td>${array[0]}</td><td>${array[1]}</td></tr>`;
                     }
                     tablebody.innerHTML = rows;
                 });
-
-            /** @param {boolean} extend @param {Array[]} arrays*/
-            function* zip(...arrays) {
-                var length = 0
-
-                for (const item of arrays) {
-                    length = Math.max(length, item.length)
-                }
-
-                for (const item of arrays) {
-                    if (item.length < length) {
-                        item.fill('', item.length)
-                    }
-                }
-
-                for (let index = 0; index < length; index++) {
-                    var output = [];                    
-                    for (const item of arrays) {
-                        output.push(item[index])
-                    }
-
-                    console.log('Output:', output)
-
-                    yield output
-                }
-            }
         </script>
     </body>
 </html>
