--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -57,49 +57,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        
+
                     </tbody>
                 </table>
+
+                Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>
             </section>
         </div>
 
         <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+        <script type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script>
             var tablebody = document.getElementsByTagName('tbody')[0];
-
-            /** @param {boolean} extend @param {Iterable[]} arrays*/
-            function* zip(...arrays) {
-                arrays = arrays.map(arr => Array.from(arr))
-                var maxlength = 0
-
-                for (const item of arrays) {
-                    maxlength = Math.max(maxlength, item.length)
-                }
-
-                console.log(maxlength)
-
-                console.log('Before:', arrays);
-
-                for (const item of arrays) {
-                    if (item.length < maxlength) {
-                        item.fill('', item.length)
-                    }
-                }
-
-                console.log('After:', arrays);
-
-                for (let index = 0; index < maxlength; index++) {
-                    var output = [];
-
-                    for (const item of arrays) {
-                        output.push(item[index])
-                    }
-
-                    //console.log('Output:', output)
-
-                    yield output
-                }
-            }
 
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
@@ -111,10 +80,10 @@
                         [elite, nonelite][Number(String(units.passive_skill).includes('200304'))].add(units.code)
                     }
 
-                    for (const array of zip(elite, nonelite)) {
-                        //console.log('Array:', array)
+                    for (const array of Zip(true, elite, nonelite)) {
                         rows += `<tr><td>${array[0]}</td><td>${array[1]}</td></tr>`;
                     }
+
                     tablebody.innerHTML = rows;
                 });
         </script>
