--- a/GFL/index.html
+++ b/GFL/index.html
@@ -179,14 +179,7 @@
     </style>
 
     <body>
-        <header>
-            <div class="container">
-                <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-                <h2>Girls' Frontline Reddit Lounge FAQs</h2>
-
-                <include src="/univasset/scripts/mainpagebuttons.html"></include>
-            </div>
-        </header>
+        <include src="/univasset/scripts/mainpagebuttons.html" param="['Girls\' Frontline Reddit Lounge FAQs']"></include>
 
         <div class="container">
             <section id="main_content">
