--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -45,14 +45,7 @@
     </style>
 
     <body>
-        <header>
-            <div class="container">
-                <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-                <h2>Newbie Starter Guide</h2>
-
-                <include src="/univasset/scripts/mainpagebuttons.html"></include>
-            </div>
-        </header>
+        <include src="/univasset/scripts/mainpagebuttons.html" param="['Newbie Starter Guide']"></include>
 
         <div class="container">
             <section id="main_content">
