--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
     </head>
 
     <body>
-        <header>
-            <div class="container">
-                <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-                <h2>Welcome to the Main Page</h2>
-
-                <include src="/univasset/scripts/mainpagebuttons.html"></include>
-            </div>
-        </header>
+        <include src="/univasset/scripts/mainpagebuttons.html" param="['Welcome to the Main Page']"></include>
 
         <div class="container">
             <section id="main_content">
