--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -38,14 +38,7 @@
     </head>
 
     <body>
-        <header>
-            <div class="container">
-                <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-                <h2>List of Elite and Non-elite Units</h2>
-
-                <include src="/univasset/scripts/mainpagebuttons.html"></include>
-            </div>
-        </header>
+        <include src="/univasset/scripts/mainpagebuttons.html" param="['List of Elite and Non-elite Units']"></include>
 
         <div class="container">
             <section id="main_content">
@@ -61,15 +54,14 @@
                     </tbody>
                 </table>
 
-                Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>
+                Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.
             </section>
         </div>
 
+        <!-- #region Javascript -->
         <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script>
-            var tablebody = document.getElementsByTagName('tbody')[0];
-
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
@@ -77,15 +69,16 @@
                     var elite = new Set(), nonelite = new Set(), rows = "";
                     
                     for (const units of jsonObject) {
-                        [elite, nonelite][Number(String(units.passive_skill).includes('200304'))].add(units.code)
+                        (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
                     }
 
-                    for (const array of Zip(true, elite, nonelite)) {
-                        rows += `<tr><td>${array[0]}</td><td>${array[1]}</td></tr>`;
+                    for (const [unitE, unitNE] of Zip(true, elite, nonelite)) {
+                        rows += `<tr><td>${unitE}</td><td>${unitNE}</td></tr>`;
                     }
 
-                    tablebody.innerHTML = rows;
-                });
+                    return rows;})
+                .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
         </script>
+        <!-- #endregion -->
     </body>
 </html>
