--- a/univasset/scripts/mainpagebuttons.html
+++ b/univasset/scripts/mainpagebuttons.html
@@ -1,16 +1,11 @@
-<section id="downloads">
-    <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
-    <!-- Menu Buttons -->
-</section>
-
-<!-- header>
+<header>
     <div class="container">
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-        <h2><getparam key="0"></getparam></h2>
+        <h2><include key="0"></include></h2>
 
         <section id="downloads">
             <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
+            <!-- Menu Buttons -->
         </section>
     </div>
-</header -->
-
+</header>
