--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -38,7 +38,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html" param="['List of Elite and Non-elite Units']"></include>
+        <include src="/univasset/scripts/mainpagebuttons.html" param="[List of Elite and Non-elite Units]"></include>
 
         <div class="container">
             <section id="main_content">
