--- a/GFL/index.html
+++ b/GFL/index.html
@@ -179,7 +179,7 @@
     </style>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html" param="['Girls\' Frontline Reddit Lounge FAQs']"></include>
+        <include src="/univasset/scripts/mainpagebuttons.html" param="[Girls\' Frontline Reddit Lounge FAQs]"></include>
 
         <div class="container">
             <section id="main_content">
