--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html" param="[Welcome to the Main Page]"></include>
+        <include src="/univasset/scripts/mainpagebuttons.html" param='["Welcome to the Main Page"]'></include>
 
         <div class="container">
             <section id="main_content">
