--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -45,7 +45,7 @@
     </style>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html" param="[Newbie Starter Guide]"></include>
+        <include src="/univasset/scripts/mainpagebuttons.html" param='["Newbie Starter Guide"]'></include>
 
         <div class="container">
             <section id="main_content">
