--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+        <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,7 +110,7 @@
                         <ul>
                             <li><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-how-start-girls-frontline">Main Starter Link</a></li>
                             <li><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></li>
-                            <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Team Build Priorities</a></li>
+                            <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></li>
                         </ul>
                     </li>
                     <li><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></li>
@@ -132,7 +135,5 @@
                 </ul>
             </section>
         </div>
-
-        <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
     </body>
 </html>
