--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +47,5 @@
             <section id="main_content">
             </section>
         </div>
-
-        <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
     </body>
 </html>
