--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+        <script async type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,9 +62,6 @@
             </section>
         </div>
 
-        <!-- #region Javascript -->
-        <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
-        <script type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script>
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
@@ -79,6 +80,5 @@
                     return rows;})
                 .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
         </script>
-        <!-- #endregion -->
     </body>
 </html>
