--- a/GFL/index.html
+++ b/GFL/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        <!-- #region Javascript -->
+        <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+        <script async type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+        <script async type="text/javascript" src="./tempcard.js"></script>
+        <script defer type="text/javascript" src="./indexscript.js"></script>
+        <!-- #endregion -->
+        
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -203,12 +211,5 @@
                 <div id="cards-field"></div>
             </section>
         </div>
-        
-        <!-- #region Javascript -->
-        <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
-        <script type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
-        <script type="text/javascript" src="./tempcard.js"></script>
-        <script type="text/javascript" src="./indexscript.js"></script>
-        <!-- #endregion -->
     </body>
 </html>
