--- a/GFL/index.html
+++ b/GFL/index.html
@@ -3,8 +3,8 @@
     <head>
 
         <!-- #region Javascript -->
-        <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
-        <script type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+        <script async type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+        <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script defer type="text/javascript" src="./tempcard.js"></script>
         <script defer type="text/javascript" src="./indexscript.js"></script>
         <!-- #endregion -->
