--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         
-        <script async type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+        <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
 
         <meta charset='utf-8'>
