--- a/GFL/index.html
+++ b/GFL/index.html
@@ -3,7 +3,7 @@
     <head>
 
         <!-- #region Javascript -->
-        <script async type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+        <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script defer type="text/javascript" src="./tempcard.js"></script>
         <script defer type="text/javascript" src="./indexscript.js"></script>
