--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html">"Welcome to the Main Page"</include>
+        <include src="/univasset/scripts/mainpagebuttons.html">"<span onload="alert('bleh');"></span>"<!-- "Welcome to the Main Page" --></include>
 
         <div class="container">
             <section id="main_content">
