--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
 
         <meta charset='utf-8'>
@@ -40,35 +39,28 @@
         <!-- End Jekyll SEO tag -->
     </head>
 
-    <style>
-        #main_content h1 a {
-            color: inherit;
-            text-decoration: none;
-        }
-    </style>
-
     <body>
         <include src="/univasset/scripts/mainpagebuttons.html">"Newbie Starter Guide"</include>
 
         <div class="container">
             <section id="main_content">
-                <h1 id="starting"><a href="#starting">How worth is it to start this game now given how long it's been out?</a></h1>
+                <a href="#starting" id="starting"><h1>How worth is it to start this game now given how long it's been out?</h1></a>
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
                 <p>For contents, the only permanently missable ones are probably minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not OP).</p>
                 <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>                
 
-                <h1 id="gacha"><a href="#gacha">How is the gacha in this game?</a></h1>
+                <a href="#gacha" id="gacha"><h1>How is the gacha in this game?</h1></a>
                 <p>The only gacha in this game is cosmetics. Characters/Units/Dolls in this game do not go on a rotating banner, instead once they enter the "gacha pool", they're available permanently. In essence, this game is not a gacha game in terms of unit pulling.</p>
 
-                <h1 id="reroll"><a href="#reroll">Is it worth to reroll in this game?</a></h1>
+                <a href="#reroll" id="reroll"><h1>Is it worth to reroll in this game?</h1></a>
                 <p>Depends on what you value more. If you want a pretty easy time until endgame, game already gives you free strong dolls as part of the newbie missions. Endgame? This is a game of accumulating various tools instead of just a select few meta characters due to the volatile meta shifts. Collab units? They're not gacha or rather, you're guaranteed to get them with a working team. So for the most part, the answer is no.</p>
 
-                <h1 id="F2P"><a href="#F2P">Is this game F2P?</a></h1>
+                <a href="#F2P" id="F2P"><h1>Is this game F2P?</h1></a>
                 <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit.</p>
                 <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
 
-                <h1 id="GFL2"><a href="#GFL2">I've heard news about GFL2. Is GFL1 going to be phased out?</a></h1>
+                <a href="#GFL2" id="GFL2"><h1>I've heard news about GFL2. Is GFL1 going to be phased out?</h1></a>
                 <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
                 <table>
                     <thead>
@@ -91,8 +83,10 @@
                         </tr>
                     </tbody>
                 </table>
+
                 <!-- How is the gameplay loop like? -->
-                <h1 id="guide"><a href="#guide">Any guide thread I should read before starting out?</a></h1>
+
+                <a href="#guide" id="guide"><h1>Any guide thread I should read before starting out?</h1></a>
                 <ul>
                     <li>GFL Corner
                         <ul>
