--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
 
         <meta charset='utf-8'>
@@ -41,7 +40,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html">"<span onload="alert('bleh');"></span>"<!-- "Welcome to the Main Page" --></include>
+        <include src="/univasset/scripts/mainpagebuttons.html">"Welcome to the Main Page"</include>
 
         <div class="container">
             <section id="main_content">
