--- a/GFL/index.html
+++ b/GFL/index.html
@@ -9,7 +9,7 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./indexcss.css">
+        <link rel="stylesheet" href="./indexstyle.css">
         
         <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
             <!-- Setup theme-color -->
