--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -3,6 +3,28 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+        <script>
+            var rowvalues;
+            fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
+                .then(response => response.text())
+                .then(jsonString => JSON.parse(jsonString))
+                .then(jsonObject => {
+                    var elite = new Set(), nonelite = new Set(), rows = "";
+                    
+                    for (const units of jsonObject) {
+                        (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
+                    }
+
+                    for (const [index, unitE, unitNE] of Zip(true, elite, nonelite)) {
+                        rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
+                    }
+
+                    return rows;})
+                .then(html => {
+                    /** @param {Element} tablebody */
+                    rowvalues = function(tablebody) {tablebody.innerHTML = html}
+                });
+        </script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,11 +70,12 @@
                 <table>
                     <thead>
                         <tr>
+                            <th>No</th>
                             <th>Elites</th>
                             <th>Non-Elites</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody onload="rowvalues(this)">
 
                     </tbody>
                 </table>
@@ -60,24 +83,5 @@
                 Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.
             </section>
         </div>
-
-        <script>
-            fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
-                .then(response => response.text())
-                .then(jsonString => JSON.parse(jsonString))
-                .then(jsonObject => {
-                    var elite = new Set(), nonelite = new Set(), rows = "";
-                    
-                    for (const units of jsonObject) {
-                        (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
-                    }
-
-                    for (const [unitE, unitNE] of Zip(true, elite, nonelite)) {
-                        rows += `<tr><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
-                    }
-
-                    return rows;})
-                .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
-        </script>
     </body>
 </html>
