--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -22,8 +22,9 @@
                     return rows;})
                 .then(html => {
                     /** @param {Element} tablebody */
-                    rowvalues = function(tablebody) {tablebody.innerHTML = html}
-                });
+                    rowvalues = function(tablebody) {tablebody.innerHTML = html}})
+                .catch(error => console.log(error))
+                
         </script>
 
         <meta charset='utf-8'>
@@ -62,7 +63,7 @@
         <!-- End Jekyll SEO tag -->
     </head>
 
-    <body>
+    <body onload="rowvalues(this)">
         <include src="/univasset/scripts/mainpagebuttons.html">"List of Elite and Non-elite Units"</include>
 
         <div class="container">
@@ -75,7 +76,7 @@
                             <th>Non-Elites</th>
                         </tr>
                     </thead>
-                    <tbody onload="rowvalues(this)">
+                    <tbody>
 
                     </tbody>
                 </table>
