--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -4,8 +4,7 @@
         <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script>
-            var rowvalues;
-            fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
+            var rowvalues = await fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
                 .then(jsonObject => {
@@ -22,8 +21,7 @@
                     return rows;})
                 .then(html => {
                     /** @param {Element} tablebody */
-                    return function(tablebody) {tablebody.innerHTML = html}})
-                .then(func => {rowvalues = func});
+                    return function(tablebody) {tablebody.innerHTML = html}});
         </script>
 
         <meta charset='utf-8'>
