--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -61,8 +61,9 @@
                 Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.
             </section>
         </div>
-        
+
         <script>
+            //search for running split scripts
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
