--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -64,6 +64,7 @@
 
         <script>
             //search for running split scripts
+            //import {Zip} from '/univasset/scripts/externaljavascript.js';
             fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
                 .then(response => response.text())
                 .then(jsonString => JSON.parse(jsonString))
