--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+        <!--script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script-->
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
+        <script type="module">
+            import {Zip} from '/univasset/scripts/externaljavascript.js';
+
+            fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
+                //.then(response => response.text())
+                //.then(jsonString => JSON.parse(jsonString))
+                .then(response => response.json())
+                .then(jsonObject => {
+                    var elite = new Set(), nonelite = new Set(), rows = "";
+                    
+                    for (const units of jsonObject) {
+                        (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
+                    }
+
+                    for (const [index, unitE, unitNE] of Zip(true, elite, nonelite)) {
+                        rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
+                    }
+
+                    return rows;})
+                .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
+        </script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -61,26 +82,5 @@
                 Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.
             </section>
         </div>
-
-        <script>
-            //search for running split scripts
-            //import {Zip} from '/univasset/scripts/externaljavascript.js';
-            fetch('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json')
-                .then(response => response.text())
-                .then(jsonString => JSON.parse(jsonString))
-                .then(jsonObject => {
-                    var elite = new Set(), nonelite = new Set(), rows = "";
-                    
-                    for (const units of jsonObject) {
-                        (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
-                    }
-
-                    for (const [index, unitE, unitNE] of Zip(true, elite, nonelite)) {
-                        rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
-                    }
-
-                    return rows;})
-                .then(html => {document.getElementsByTagName('tbody')[0].innerHTML = html});
-        </script>
     </body>
 </html>
