--- a/GFL/index.html
+++ b/GFL/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
+        <!--script defer type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script-->
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
-        <script defer type="text/javascript" src="./tempcard.js"></script>
-        <script defer type="text/javascript" src="./indexscript.js"></script>
+        <!--script defer type="text/javascript" src="./tempcard.js"></script-->
+        <script type="module" src="./indexscript.js"></script>
         
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
