--- a/GFL/index.html
+++ b/GFL/index.html
@@ -8,6 +8,7 @@
 
             - Reloading Google Embed Iframe
         -->
+        <!-- Some GDoc fails to load and reloading it blanks the whole page. -->
         <!-- script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script -->
         <script defer type="text/javascript" src="/univasset/scripts/includefile.js"></script>
         <script type="module" src="./indexscript.js"></script>
