--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -39,6 +39,12 @@
         <!-- End Jekyll SEO tag -->
     </head>
 
+    <style>
+        a h1 {
+            text-decoration: none;
+        }
+    </style>
+
     <body>
         <include src="/univasset/scripts/mainpagebuttons.html">"Newbie Starter Guide"</include>
 
@@ -87,46 +93,42 @@
                 <!-- How is the gameplay loop like? -->
 
                 <a href="#guide" id="guide"><h1>Any guide thread I should read before starting out?</h1></a>
-                <ul>
-                    <li>GFL Corner
-                        <ul>
-                            <li><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></li>
-                            <li><a href="https://docs.google.com/spreadsheets/d/10LJdksnM3zipOb72IneJD7WVp3765JYJEGg0LnodzDI">Spreadsheet Guide</a></li>
-                        </ul>
-                    </li>
-                    <li>Angry Trap Midget/Matsuda
-                        <ul>
-                            <li><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">First Steps</a></li>
-                            <li><a href="https://gfl.matsuda.tips/blog/">Guides</a></li>
-                        </ul>
-                    </li>
-                    <li>Gamepress
-                        <ul>
-                            <li><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-how-start-girls-frontline">Main Starter Link</a></li>
-                            <li><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></li>
-                            <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></li>
-                    <li><a href="https://docs.google.com/document/u/0/d/1MKtHCtY08wlyIZPLvHUa88oaWQzaKvVSxa0gEFZFMiY">u/ShuviSchwarze</a></li>
-                    <li><a href="https://docs.google.com/document/d/1BfHqPiq2E6ZAzm5EZI3SGvqgV58JBQEG3XeTu0hPfYI">Mashpit #1075</a></li>
-                    <li><a href="https://redd.it/8i4odx">u/stae1234</a></li>
-                    <li><a href="https://youtu.be/cP8441Nr12E">Ceia</a></li>
-                    <li>CosmicArcher
-                        <ul>
-                            <li><a href="https://youtube.com/playlist?list=PLEZKU4ZvzVK1sUEs86Or44P5q4qz0Ncox">Walkthrough</a></li>
-                            <li><a href="https://docs.google.com/document/d/16g4D18bUGqomAzL-UANAjZAU4HfHruph-R8uyHBhMcE">Advanced Info</a></li>
-                        </ul>
-                    </li>
-                    <li>u/ConductorBichir
-                        <ul>
-                            <li><a href="https://www.reddit.com/user/ConductorBichir">Reddit Pinned Posts</a></li>
-                            <li><a href="https://docs.google.com/document/d/1ixj8_H7bB5YELD276NaG8_A_ElOMYS95RfjdM3fUaVc">Starter Guide</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="https://docs.google.com/document/d/1hdoD9i8gMUsdU22pncGw3o63_-pazXpq84hcvothAT4">/gfg/</a></li>
-                    <li><a href="https://www.reddit.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0v36wf">u/pointblanksniper</a></li>
-                </ul>
+                <dl>
+                    <dt>Gamepress</dt>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-how-start-girls-frontline">Main Starter Link</a></dd>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></dd>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></dd>
+
+                    <dt>GFL Corner</dt>
+                    <dd><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></dd>
+                    <dd><a href="https://docs.google.com/spreadsheets/d/10LJdksnM3zipOb72IneJD7WVp3765JYJEGg0LnodzDI">Spreadsheet Guide</a></dd>
+
+                    <dt>Angry Trap Midget/Matsuda</dt>
+                    <dd><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">First Steps</a></dd>
+                    <dd><a href="https://gfl.matsuda.tips/blog/">Guides</a></dd>
+
+                    <dt>CosmicArcher</dt>
+                    <dd><a href="https://youtube.com/playlist?list=PLEZKU4ZvzVK1sUEs86Or44P5q4qz0Ncox">Walkthrough/Early Game Speedrun</a></dd>
+                    <dd><a href="https://docs.google.com/document/d/16g4D18bUGqomAzL-UANAjZAU4HfHruph-R8uyHBhMcE">Advanced Info</a></dd>
+
+                    <dt>u/ConductorBichir</dt>
+                    <dd><a href="https://www.reddit.com/user/ConductorBichir">Reddit Pinned Posts</a></dd>
+                    <dd><a href="https://docs.google.com/document/d/1ixj8_H7bB5YELD276NaG8_A_ElOMYS95RfjdM3fUaVc">2.09 Starter Guide</a></dd>
+
+                    <dt><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></dt>
+
+                    <dt><a href="https://docs.google.com/document/u/0/d/1MKtHCtY08wlyIZPLvHUa88oaWQzaKvVSxa0gEFZFMiY">u/ShuviSchwarze</a></dt>
+
+                    <dt><a href="https://docs.google.com/document/d/1BfHqPiq2E6ZAzm5EZI3SGvqgV58JBQEG3XeTu0hPfYI">Mashpit #1075</a></dt>
+
+                    <dt><a href="https://redd.it/8i4odx">u/stae1234</a></dt>
+
+                    <dt><a href="https://youtu.be/cP8441Nr12E">Ceia</a></dt>
+
+                    <dt><a href="https://docs.google.com/document/d/1hdoD9i8gMUsdU22pncGw3o63_-pazXpq84hcvothAT4">/gfg/</a></dt>
+
+                    <dt><a href="https://www.reddit.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0v36wf">u/pointblanksniper</a></dt>
+                </dl>
             </section>
         </div>
     </body>
