--- a/GFL/index.html
+++ b/GFL/index.html
@@ -62,7 +62,7 @@
                 <div id="input-type-container">
                     <label class="flex-label checked"><input type="radio" name="input-type" onclick="toggleInput()" value="search" checked><h2>Keyword</h2></label>
                     <label class="flex-label"><input type="radio" name="input-type" onclick="toggleInput()" value="tags"><h2>Tags</h2></label>
-                </div><!-- onclick -->
+                </div>
 
                 <form>
                     <div id="tags-list"></div>
