--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -46,7 +46,7 @@
     </style>
 
     <body>
-        <include src="/univasset/scripts/mainpagebuttons.html">"Newbie Starter Guide"</include>
+        <include src="/univasset/scripts/header.html">"Newbie Starter Guide"</include>
 
         <div class="container">
             <section id="main_content">
@@ -98,6 +98,7 @@
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-how-start-girls-frontline">Main Starter Link</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></dd>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Doll Acquisition</a></dd>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-gem-shop-and-spending-priorities">Spending Priorities</a></dd>
 
                     <dt>GFL Corner</dt>
                     <dd><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></dd>
