--- a/GFL/index.html
+++ b/GFL/index.html
@@ -57,7 +57,7 @@
                 <p>v 1.<span id="version-number"></span></p>
 
                 <p><h1><a href="./starter">New Player Guide</a></h1></p>                
-                <p><h1><a href="https://redd.it/l5a6vz">Topics Repository</a></h1></p>
+                <p><h1><a href="./mainpage">Topics Repository</a></h1></p>
 
                 <div id="input-type-container">
                     <label class="flex-label checked"><input type="radio" name="input-type" onclick="toggleInput()" value="search" checked><h2>Keyword</h2></label>
