--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -53,8 +53,8 @@
                 <a href="#starting" id="starting"><h1>How worth is it to start this game now given how long it's been out?</h1></a>
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
-                <p>For contents, the only permanently missable ones are probably minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not OP).</p>
-                <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>                
+                <p>For contents, the only permanently missable ones are mainly minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not gamebreaking).</p>
+                <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>
 
                 <a href="#gacha" id="gacha"><h1>How is the gacha in this game?</h1></a>
                 <p>The only gacha in this game is cosmetics. Characters/Units/Dolls in this game do not go on a rotating banner, instead once they enter the "gacha pool", they're available permanently. In essence, this game is not a gacha game in terms of unit pulling.</p>
