--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -91,7 +91,7 @@
                 </table>
                 <blockquote>
                     I really wish they chose a different name for the game. Nobody ever asked if gfl 1 is ending when pnc was anounced
-                    - KookyInspection, July 8, 2022
+                    - u/KookyInspection, July 8, 2022
                 </blockquote>
 
                 <!-- How is the gameplay loop like? -->
