--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -91,8 +91,8 @@
                 </table>
                 <blockquote>
                     I really wish they chose a different name for the game. Nobody ever asked if gfl 1 is ending when pnc was anounced
-                    - u/KookyInspection, July 8, 2022
                 </blockquote>
+                - u/KookyInspection, July 8, 2022
 
                 <!-- How is the gameplay loop like? -->
 
@@ -119,6 +119,7 @@
                     <dt>u/ConductorBichir</dt>
                     <dd><a href="https://www.reddit.com/user/ConductorBichir">Reddit Pinned Posts</a></dd>
                     <dd><a href="https://docs.google.com/document/d/1ixj8_H7bB5YELD276NaG8_A_ElOMYS95RfjdM3fUaVc">2.09 Starter Guide</a></dd>
+                    <dd><a href="https://redd.it/vx8kod">June Tierlist (Isomer+) finalized by u/BichirMemoriam</a></dd>
 
                     <dt><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></dt>
 
