--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
         <div class="container">
             <section id="main_content">
+                <blockquote>
+                    AFAIK, GFL2 is a completely different game and won't affect this game. Don't quote me on that, though.
+                </blockquote>
+                - Kam0laZ, July 11, 2022
             </section>
         </div>
     </body>
