--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <blockquote>
                     AFAIK, GFL2 is a completely different game and won't affect this game. Don't quote me on that, though.
                 </blockquote>
-                - Kam0laZ, July 11, 2022
+                - u/Kam0laZ, July 11, 2022
             </section>
         </div>
     </body>
